--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "starwars",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://padavanshh.github.io/starwars/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
